--- a/BOJ_Algorithm/BOJ_Algorithm.vcxproj.filters
+++ b/BOJ_Algorithm/BOJ_Algorithm.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="11053.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="9663.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="input.txt">
